@@ -5,7 +5,7 @@
 
 ## Customize by copying to MkRules.local and uncommenting and editing 
 ## some of the definitions there. The values are tailored to Rtools44, the
-## currently recommented toolchain using gcc 13, MinGW-w64 11, 64-bit only,
+## currently recommended toolchain using gcc 13, MinGW-w64 11, 64-bit only,
 ## UCRT. R is only intended to be built for 64-bit UCRT as of R 4.2. The
 ## values also work with Rtools44 on aarch64 (LLVM 17, clang/flang-new, lld,
 ## libc++) via USE_LLVM=1 and WIN=.
@@ -134,7 +134,7 @@
 # with the currently recommended toolchain, Msys2 texi2dvi is used, but needs a workaround for a bug
 # TEXI2DVI = env COMSPEC= texi2dvi
 
-# for texinfo >= 5.1. If the texinfo files are installed at /packages/texinfo,
+# For Texinfo >= 6.1. If the texinfo files are installed at /packages/texinfo,
 # TEXI2ANY = /path/to/perl -I/packages/texinfo /packages/texinfo/texi2any
 # if you do not have texinfo (default),
 # TEXI2ANY = missing
